// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cart checkOut() should return an object with the total and the list of items 1`] = `
Object {
  "items": Array [
    Object {
      "product": Object {
        "price": 35388,
        "title": "Adidas Running Boost FX1000",
      },
      "quantity": 2,
    },
    Object {
      "product": Object {
        "price": 41872,
        "title": "Adidas Running Boost FX1000 - Women",
      },
      "quantity": 3,
    },
  ],
  "total": 196392,
}
`;

exports[`Cart checkOut() should return an object with the total and the list of items when summary() is called 1`] = `
Object {
  "formmated": "R$3,025.56",
  "items": Array [
    Object {
      "product": Object {
        "price": 35388,
        "title": "Adidas Running Boost FX1000",
      },
      "quantity": 5,
    },
    Object {
      "product": Object {
        "price": 41872,
        "title": "Adidas Running Boost FX1000 - Women",
      },
      "quantity": 3,
    },
  ],
  "total": 302556,
}
`;
